--- a/index.html
+++ b/index.html
@@ -3,10 +3,164 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sample HTML Page for Demonstration">
+    <meta name="description" content="Enhanced Sample HTML Page">
     <meta name="author" content="Random Generator">
-    <title>Sample Index Page</title>
+    <title>Enhanced Sample Index Page</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* General Styling */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            scroll-behavior: smooth;
+        }
+
+        /* Navigation Bar */
+        nav {
+            background-color: #333;
+            color: white;
+            padding: 10px 20px;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+        }
+
+        nav ul li {
+            margin: 0 15px;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            padding: 5px 10px;
+        }
+
+        nav ul li a:hover {
+            background-color: #575757;
+            border-radius: 5px;
+        }
+
+        /* Hero Section */
+        #hero {
+            background-image: url('https://via.placeholder.com/1200x600');
+            background-size: cover;
+            color: white;
+            text-align: center;
+            padding: 100px 20px;
+        }
+
+        #hero h1 {
+            font-size: 3rem;
+        }
+
+        #hero p {
+            font-size: 1.5rem;
+            margin: 20px 0;
+        }
+
+        #hero button {
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 1rem;
+            cursor: pointer;
+        }
+
+        #hero button:hover {
+            background-color: #0056b3;
+        }
+
+        /* Testimonials Section */
+        #testimonials {
+            background-color: #f9f9f9;
+            padding: 50px 20px;
+            text-align: center;
+        }
+
+        #testimonials h2 {
+            margin-bottom: 20px;
+        }
+
+        #testimonials blockquote {
+            font-style: italic;
+            margin: 20px auto;
+            max-width: 600px;
+        }
+
+        #testimonials cite {
+            display: block;
+            margin-top: 10px;
+            font-weight: bold;
+        }
+
+        /* FAQ Section */
+        #faq {
+            padding: 50px 20px;
+        }
+
+        #faq h2 {
+            margin-bottom: 20px;
+        }
+
+        .faq-item {
+            margin-bottom: 15px;
+        }
+
+        .faq-item h3 {
+            cursor: pointer;
+            margin: 0;
+            color: #007BFF;
+        }
+
+        .faq-item p {
+            display: none;
+            margin: 5px 0 0 0;
+        }
+
+        /* Back-to-Top Button */
+        #back-to-top {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            padding: 10px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            display: none;
+        }
+
+        #back-to-top:hover {
+            background-color: #0056b3;
+        }
+
+        /* Footer */
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 20px;
+        }
+
+        footer a {
+            color: #007BFF;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -15,15 +169,17 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
+                <li><a href="#faq">FAQ</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
-    
-    <section id="home">
-        <h1>Welcome to Our Sample Website</h1>
-        <p>We provide randomly generated content for your development needs!</p>
-        <button onclick="alert('Welcome!')">Click Me</button>
+
+    <section id="hero">
+        <h1>Welcome to Our Enhanced Website</h1>
+        <p>Your one-stop solution for all web development needs.</p>
+        <button onclick="alert('Thanks for visiting!')">Get Started</button>
     </section>
 
     <section id="about">
@@ -39,6 +195,30 @@
             <li>Sample styles and themes</li>
             <li>Testing and debugging support</li>
         </ul>
+    </section>
+
+    <section id="testimonials">
+        <h2>What Our Clients Say</h2>
+        <blockquote>
+            "This website is amazing! It made our development process so much easier."
+            <cite>- Alex Johnson</cite>
+        </blockquote>
+        <blockquote>
+            "I loved the sample content! It was exactly what I needed for my project."
+            <cite>- Sarah Brown</cite>
+        </blockquote>
+    </section>
+
+    <section id="faq">
+        <h2>Frequently Asked Questions</h2>
+        <div class="faq-item">
+            <h3>What services do you offer?</h3>
+            <p>We provide sample content, web templates, and debugging assistance.</p>
+        </div>
+        <div class="faq-item">
+            <h3>How can I contact you?</h3>
+            <p>You can reach us via the contact form below.</p>
+        </div>
     </section>
 
     <section id="contact">
@@ -57,13 +237,40 @@
         </form>
     </section>
 
+    <button id="back-to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">Back to Top</button>
+
     <footer>
-        <p>&copy; 2025 Sample Website. All rights reserved.</p>
+        <p>&copy; 2025 Enhanced Website. All rights reserved.</p>
         <p>Follow us on 
             <a href="https://twitter.com" target="_blank">Twitter</a>, 
             <a href="https://facebook.com" target="_blank">Facebook</a>, and 
             <a href="https://instagram.com" target="_blank">Instagram</a>.
         </p>
+        <p>
+            <a href="#home">Home</a> | 
+            <a href="#about">About</a> | 
+            <a href="#services">Services</a>
+        </p>
     </footer>
+
+    <script>
+        // Show the back-to-top button when scrolling down
+        window.onscroll = function() {
+            const btn = document.getElementById("back-to-top");
+            if (document.documentElement.scrollTop > 200) {
+                btn.style.display = "block";
+            } else {
+                btn.style.display = "none";
+            }
+        };
+
+        // Toggle FAQ answers
+        document.querySelectorAll('.faq-item h3').forEach(item => {
+            item.addEventListener('click', () => {
+                const next = item.nextElementSibling;
+                next.style.display = next.style.display === 'block' ? 'none' : 'block';
+            });
+        });
+    </script>
 </body>
 </html>
